--- a/estilo.css
+++ b/estilo.css
@@ -1,14 +1,12 @@
 * {   
     width: 100%;
     height: 100%vh;
-    background: url(imagenes/imagen1.jpg);
+    background: url(5dec47012d257.jpeg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
     display: flex;
     justify-content: center;
-   }
-* { 
-       font-size: 60px;
-       color: #000;
+    font-size: 60px;
+    color: #000;
     }   
