--- a/estilo.css
+++ b/estilo.css
@@ -1,12 +1,9 @@
 * {   
-    width: 100%;
-    height: 100%vh;
-    background: url(5dec47012d257.jpeg);
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    display: flex;
-    justify-content: center;
-    font-size: 60px;
-    color: #000;
-    }   
+   width: 90%;
+   height: 100%vh;
+   background: url(5dec47012d257.jpeg);
+   background-size: cover;
+   background-attachment: fixed;
+   font-size: 25px;
+   color: #ffffff;  
+ }
