--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 * {   
    width: 90%;
    height: 100%vh;
-   background: url(5dec47012d257.jpeg);
+   background: url(imagenes/5dec47012d257.jpeg);
    background-size: cover;
    background-attachment: fixed;
    font-size: 25px;
