--- a/CSS/web.css
+++ b/CSS/web.css
@@ -1,3 +1,8 @@
+/* Fuentes de texto */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Mate+SC&display=swap');
+
 /* Global */
 *{
    margin:0;
@@ -7,6 +12,7 @@
  
  body {
    font-family: "Oswald", sans-serif;
+   background: url(img/)
  }
 
 /*Barra de navegación*/
@@ -73,14 +79,21 @@ background: #4a4a4a;
    background:url(img/banner-tec.jpg);
    background-attachment:scroll;
    background-position:center;
-   background-size:200vh;
+   background-size: 200vh;
    background-color: rgba(0,0,0,0.6);
    background-blend-mode: soft-light;
    position: relative;
    width: 100%;
-   height:27vh;
+   height: 25vh;
 }
-.img-header .bienvenida{
+.bienvenida h2{
+   color:#ffffff;
+   text-align: center;
+   font-size: 40px;
+   font-weight: 400;
+   margin-bottom: 1em;
+}
+.bienvenida{
    width: 100%;
    height: 35vh;
    display: flex;
@@ -88,14 +101,8 @@ background: #4a4a4a;
    align-items: center;
    flex-direction: column;
 }
-.img-header .bienvenida h2{
-   color:goldenrod;
-   font-weight: 400;
-   font-size: 40px;
-   text-align: center;
-}
 .img-header .bienvenida i {
-   color: #fff;
+   color: rgb(194, 94, 13);
 }
 .img-header .bienvenida{
    width: 100%;
@@ -106,6 +113,71 @@ background: #4a4a4a;
    flex-direction: column;
 }
 
-.img-header .bienvenida i {
-   color: #fff;
+
+/** About Us **/
+.about-us{width: 100%;}
+.about-us .info{
+    width: 100%;
+    margin-top: 100px;
+}
+.about-us .info h3{
+    text-align: center;
+    font-size: 40px;
+    font-weight: 400;
+
+}
+.about-us .info p {
+   width: 80%;
+   margin:50px auto;
+   text-align: center;
+   color:#000;
+   font-size: 19px;
+   line-height: 40px;
+   font-family: Lato;
+}
+.about-us .info hr{
+    width: 90%;
+    border:none;
+    height: 2px;
+    background: #4d4d4d;
+    margin:auto;
+}
+.about-us .free-content{
+    width: 100%;
+    margin-top: 100px;
+    background: #787988;
+    padding:30px;
+}
+.about-us .free-content h4{
+    text-align: center;
+    font-size: 40px;
+    font-weight: 400;
+    color:#fff;
+}
+.about-us .free-content .icons{
+    width: 90%;
+    margin:30px auto;
+    display: flex;
+    justify-content: center;
+}
+.about-us .free-content .icons > div{width: 100%; margin:0px 30px;}
+.about-us .free-content .icons > div > .iconos{
+    width:100%;
+    font-size: 40px;
+    color:#fff;
+    display: flex;
+    justify-content: center;
+}
+.about-us .free-content .icons > div h6{
+    font-size: 25px;
+    font-family: 'Mate SC', serif;
+    color:#fff;
+    text-align: center;
+    font-weight:normal;
+    margin:20px 0px 5px 0px;
+}
+.about-us .free-content .icons > div p{
+    font-size: 18px;
+    text-align: center;
+    color:#fff;
 }
