--- a/CSS/web.css
+++ b/CSS/web.css
@@ -1,6 +1,5 @@
 /* Fuentes de texto */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Mate+SC&display=swap');
 
 /* Global */
@@ -20,7 +19,6 @@
    width: 80%;
    margin: 0 auto;
 }
-
 .header {
    background: #333;
    color: white;
@@ -30,50 +28,41 @@
    top: 0;
    width: 100%;
 }
-
 .header a {
    color: white;
    text-decoration: none;
 }
-
 .logo-nav-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
 }
-
 .logo {
    max-height:50%;
    min-height:20%;
    width:50px;
 }
-
 .menu-icon {
    display: none;
 }
-
 .navigation ul{
    margin: 0;
    padding: 0;
    list-style: none;
 }
-
 .navigation ul li {
       display: inline-block;
 }
-
 .navigation ul li a {
 display: block;
 padding: 0.5rem 1rem;
 transition: all 0.4s linear;
 border-radius: 5px;
 }
-
 .navigation ul li a:hover {
 background: #4a4a4a;
 }
-
  /** Img header **/
 .img-header{
    background:url(img/banner-tec.jpg);
@@ -88,6 +77,7 @@ background: #4a4a4a;
 }
 .bienvenida h2{
    color:#ffffff;
+   font-family: 'Mate SC', serif;
    text-align: center;
    font-size: 40px;
    font-weight: 400;
@@ -113,9 +103,10 @@ background: #4a4a4a;
    flex-direction: column;
 }
 
-
 /** About Us **/
-.about-us{width: 100%;}
+.about-us{
+   width: 100%;
+}
 .about-us .info{
     width: 100%;
     margin-top: 100px;
@@ -124,7 +115,6 @@ background: #4a4a4a;
     text-align: center;
     font-size: 40px;
     font-weight: 400;
-
 }
 .about-us .info p {
    width: 80%;
@@ -134,13 +124,6 @@ background: #4a4a4a;
    font-size: 19px;
    line-height: 40px;
    font-family: Lato;
-}
-.about-us .info hr{
-    width: 90%;
-    border:none;
-    height: 2px;
-    background: #4d4d4d;
-    margin:auto;
 }
 .about-us .free-content{
     width: 100%;
@@ -152,7 +135,7 @@ background: #4a4a4a;
     text-align: center;
     font-size: 40px;
     font-weight: 400;
-    color:#fff;
+    color:;
 }
 .about-us .free-content .icons{
     width: 90%;
@@ -171,13 +154,105 @@ background: #4a4a4a;
 .about-us .free-content .icons > div h6{
     font-size: 25px;
     font-family: 'Mate SC', serif;
-    color:#fff;
     text-align: center;
     font-weight:normal;
     margin:20px 0px 5px 0px;
+}
+#html{
+   color: orange;
+}
+#css {
+   color:skyblue;
+}
+#javascript {
+   color:yellow;
 }
 .about-us .free-content .icons > div p{
     font-size: 18px;
     text-align: center;
     color:#fff;
 }
+
+/* Pie de página */
+footer {
+   width: 100%;
+   background: #202020;
+   color: white;  
+   position: flex; 
+   left: 0;
+   right: 0;
+   margin-top: 3em;
+}
+.container-footer-all {
+   width: 100%;
+   max-width: 1200px;
+   margin: auto;
+   padding: 40px;
+}
+.container-body {
+   display: flex;
+   justify-content: space-between;
+}
+.colum1 {
+   max-width: 400px;
+}
+.colum1 h1 {   
+   font-size: 22px;
+}
+.colum1 p {
+   font-size: 14px;
+   color: #C7C7C7;
+   margin-top: 20px;
+}
+.colum2 {
+   max-width: 400px;
+}
+.colum2 h1 {
+   font-size: 22px;
+}
+.row {
+   margin-top: 20px;
+   display: flex;
+}
+.row img {
+   width: 36px;
+   height: 36px;
+}
+.row label {
+   margin-top: 10px;
+   margin-left: 20px;
+   color: #C7C7C7;
+}
+.colum3 {
+   max-width: 400px;
+}
+.colum3 h1 {
+   font-size: 22px;
+}
+.row2 {
+   margin-top: 20px;
+   display: flex;
+}
+.row2 img {
+   width: 36px;
+   height: 36px;
+}
+.row2 label {
+   margin-top: 10px;
+   margin-left: 20px;
+   max-width: 140px;
+}
+.container-footer {
+   width: 100%;
+}
+.copyright {
+   margin-left: 40%;
+   margin-right: 0%;
+   color: #C7C7C7;
+}
+.information a {
+   text-decoration: none;
+   color: #C7C7C7;
+}
+
+
