--- a/CSS/web.css
+++ b/CSS/web.css
@@ -2,9 +2,71 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mate+SC&display=swap');
 
+/* Global */
+*{
+   margin:0;
+   padding:0;
+   box-sizing: border-box;
+}
+ 
+ body {
+   font-family: 'Mate SC', serif;
+   background: url(img/)
+ }
+
+/*Barra de navegación*/
+.container {
+   width: 80%;
+   margin: 0 auto;
+}
+.header {
+   background: #333;
+   color: white;
+   padding: 0.5rem 0;
+   position: relative;
+   left: 0;
+   top: 0;
+   width: 100%;
+}
+.header a {
+   color: white;
+   text-decoration: none;
+   font-family: "Oswald", sans-serif;
+}
+.logo-nav-container {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   flex-wrap: wrap;
+}
+.logo {
+   max-height:50%;
+   min-height:20%;
+   width:50px;
+}
+.menu-icon {
+   display: none;
+}
+.navigation ul{
+   margin: 0;
+   padding: 0;
+   list-style: none;
+}
+.navigation ul li {
+      display: inline-block;
+}
+.navigation ul li a {
+display: block;
+padding: 0.5rem 1rem;
+transition: all 0.4s linear;
+border-radius: 5px;
+}
+.navigation ul li a:hover {
+background: #4a4a4a;
+}
  /** Img header **/
 .img-header{
-   background:url(img/banner.jpg);
+   background:url(img/banner-tec.jpg);
    background-attachment:scroll;
    background-position:center;
    background-size: 200vh;
@@ -15,9 +77,7 @@
    height: 25vh;
 }
 .bienvenida h2{
-   background: linear-gradient(rgb(20, 238, 220),rgba(169, 168, 223, 0.993));
-    -webkit-background-clip: text;
-   color: transparent;
+   color:#ffffff;
    font-family: 'Mate SC', serif;
    text-align: center;
    font-size: 40px;
@@ -69,7 +129,7 @@
 .about-us .free-content{
     width: 100%;
     margin-top: 100px;
-    background-image: linear-gradient(180deg, #5d6366 0, #415460 25%, #1f4459 50%, #003553 75%, #00264d 100%);
+    background: #787988;
     padding:30px;
 }
 .about-us .free-content h4{
@@ -109,7 +169,7 @@
     font-size: 25px;
     font-family: 'Mate SC', serif;
     text-align: center;
-    font-weight: 900;
+    font-weight:normal;
     margin:20px 0px 5px 0px;
 }
 #html{
@@ -127,6 +187,87 @@
     color:#fff;
 }
 
-
+/* Pie de página */
+footer {
+   width: 100%;
+   background: #202020;
+   color: white;  
+   position: flex; 
+   left: 0;
+   right: 0;
+   margin-top: 3em;
+   font-family: "Oswald", sans-serif;
+}
+.container-footer-all {
+   width: 100%;
+   max-width: 1200px;
+   margin: auto;
+   padding: 40px;
+}
+.container-body {
+   display: flex;
+   justify-content: space-between;
+}
+.colum1 {
+   max-width: 400px;
+}
+.colum1 h1 {   
+   font-size: 22px;
+}
+.colum1 p {
+   font-size: 14px;
+   color: #C7C7C7;
+   margin-top: 20px;
+}
+.colum2 {
+   max-width: 400px;
+}
+.colum2 h1 {
+   font-size: 22px;
+}
+.row {
+   margin-top: 20px;
+   display: flex;
+}
+.row img {
+   width: 36px;
+   height: 36px;
+}
+.row label {
+   margin-top: 10px;
+   margin-left: 20px;
+   color: #C7C7C7;
+}
+.colum3 {
+   max-width: 400px;
+}
+.colum3 h1 {
+   font-size: 22px;
+}
+.row2 {
+   margin-top: 20px;
+   display: flex;
+}
+.row2 img {
+   width: 36px;
+   height: 36px;
+}
+.row2 label {
+   margin-top: 10px;
+   margin-left: 20px;
+   max-width: 140px;
+}
+.container-footer {
+   width: 100%;
+}
+.copyright {
+   margin-left: 40%;
+   margin-right: 0%;
+   color: #C7C7C7;
+}
+.information a {
+   text-decoration: none;
+   color: #C7C7C7;
+}
 
 
