--- a/Head_Pie.css
+++ b/Head_Pie.css
@@ -162,4 +162,65 @@ footer {
    text-decoration: none;
    color: #C7C7C7;
 }
- 
+
+/*Barra de navegacion para moviles*/
+@media only screen and (max-width: 700px) {
+
+   .menu-icon {
+      display: block;
+      cursor: pointer;
+      padding: 0.5rem 1rem;
+   }
+   
+   .navigation {
+      width: 100%;
+      margin-top: 1rem;
+   }
+
+      .navigation ul {
+         display: none;
+      }
+
+      .navigation ul.show {
+         display: block;
+      }
+
+      .navigation ul li {
+         display: block;
+      }
+   
+         .navigation ul li a {
+            display: block;
+            padding: 0.5rem 0;
+            transition: all 0.4s linear;
+            border-radius: 5px;
+         }
+   
+            .navigation ul li a:hover {
+               background: #4a4a4a;
+            }
+
+/*Pie de página para moviles*/
+@media screen and (max-width: 1100px) {
+   footer {
+      margin: 0;
+   }
+   .container-body  {
+       flex-wrap: wrap;
+   }
+   .container-footer {
+      width: 100%;
+   }
+
+   .copyright {
+      margin-left: 40px;
+   }
+   
+   .colum1 {
+       max-width: 100%;
+   }
+   
+   .colum2, .colum3 {
+       margin-top: 40px;
+   }
+}
