--- a/formulario.css
+++ b/formulario.css
@@ -1,87 +1,191 @@
+/* Página */
 * {
-
-    
-    box-sizing: border-box;
-
-}
-
-body {
-     
     margin: 0;
-    font-family: sans-serif;
-
+    padding: 0;
+    outline: none;
+    font-family:Arial, Helvetica, sans-serif;
 }
-
-.login {
-
-    margin: auto;
-    width: 50%;
-    max-width: 500px;
-    margin: auto;
-    margin-top: 30px;
-    padding: 20px;
-    box-shadow: 0 0 20px 1px rgba(0,0,0,0.3);
-    position: relative;
-  
+/* Estas declaraciones son para centrar el formulario y cambiar los fondos*/
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: url(/CSS_Redes_Sociales/img_redes/banner-tec.jpg);
 }
-
-.login__titulo {
-
+/* Aqui nos introducimos al formulario */
+.container {
+    width: 330px;
+    background: #fff;
+    border-radius: 5px;
     text-align: center;
-    margin-top: 0;
-    color: rgba(0,0,0,0.7);
-
+    padding: 50px 35px 10px 35px;
 }
-
-.login__input, .login__label, 
-.login__submit {
-
-    display: block;
+.container header {
+    font-size: 35px;
+    font-weight: 600;
+    margin: 0 0 30px 0;
+}
+.container .form-outer{
     width: 100%;
-    font-size: 1.3em;
-   
+    overflow: hidden;
 }
-
-.login__input {
-
-     padding: 20px;
-     background: rgba(0,0,0,0.1);
-     border: 1px solid rgba(0,0,0,0.3);
-     margin-bottom: 40px;
-
+.form-outer form {
+    display: flex;
+    width: 400%;
 }
+/*** Aquí terminamos de centrar el formulario***/
 
-.login__input:focus {
-
-    outline: 1px solid rgba(0,0,0,0.7);
-
+/* A partir de aqui vamos dando forma a los elementos del fomulario */
+.form-outer form .page {
+    width: 25%; 
+    transition: margin-left 0.3s ease-in-out;
 }
-
-.login__input:focus + .login__label {
-
-    margin-top: -130px;
-
+.form-outer form .page .title {
+    text-align: left;
+    font-size: 25px;
+    font-weight: 500;
 }
-
-.login__label {
-
-    padding-left: 15px;
+.form-outer form .page .field {
+    height: 45px;
+    width: 330px;
+    margin: 45px 0;
+    display: flex;
+    position: relative;
+}
+.form-outer form .page .field .label {
     position: absolute; 
-    margin-top: -85px;
-    z-index: -20;
-    color: rgba(0,0,0,0.5); 
-    transition: all 0.2s;
+    top: -30px;
+    font-weight: 500;
 }
-
-.login__submit {
-
-    background: rgba(0,0,0,0.7);
-    color: white;
-    padding: 10px 20px;
-    cursor: pointer;
+.form-outer form .page .field input {
+    height: 100%;
+    width: 100%;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    font-size: 18px;
+    padding-left: 15px;
+}
+form .page .field select {
+    width: 100%;
+    padding-left: 10px;
+    font-size: 17px;
+    font-weight: 500;
+}
+.form-outer form .page .field button {
+    width: 100%;
+    height: calc(100% + 5px);
+    margin-top: -20px;
     border: none;
+    background-image: linear-gradient(180deg, #b2eaff 0, #5389f2 50%, #003265 100%);
+    border-radius: 5px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+.form-outer form .page .field button:hover {
+    background: #000;
+}
+.form-outer form .page .btns button{
+    margin-top: -20px!important;
+}
+form .page .btns button .prev {
+    margin-right: 3px;
+    font-size: 17px;
+}
+form .page .btns button .next {
+    margin-left: 3px;
+}
+.container .progress-bar {
+    display:flex;
+    margin: 40px 0;
+}
+.container .progress-bar .step {
+    position: relative;
+    text-align: center;
+    width: 100%;
+}
+.progress-bar .step p{
+    font-size: 18px;
+    font-weight: 500;
+    color: #000;
+    margin-bottom: 8px;
+    transition: 0.2s;
+}
+.progress-bar .step p.active {
+    color: #2980B9;
+}
+.progress-bar .step .bullet {
+    position: relative;
+    height: 25px;
+    width: 25px;
+    border: 2px solid #000;
+    display: inline-block;
+    border-radius: 50%;
+    transition: 0.2s;
 }
 
-.fijar {
-    margin-top: -135px;
+.progress-bar .step .bullet.active {
+    border-color: #82E0AA ;
+    background-image: linear-gradient(180deg, #b4f2a0 0, #a1ec9c 16.67%, #89e397 33.33%, #6cd890 50%, #49cd8a 66.67%, #10c488 83.33%, #00bd88 100%);
 }
+
+/* Los pseudo-elementos "before" y "after" sirven para insertar contenido mediante CSS,
+"before" nos sirve para insertar por delante y "after" por detrás del contenido de un elemento HTML */
+
+.progress-bar .step:last-child .bullet:before,
+.progress-bar .step:last-child .bullet:after{
+    display: none;
+}
+.progress-bar .step .bullet:before,
+.progress-bar .step .bullet:after {
+    position: absolute;
+    content: "";
+    bottom: 11px;
+    right: -51px;
+    height: 3px;
+    width: 44px;
+    background: #262626 ;
+}
+.progress-bar .step .bullet.active:after {
+    background: #DAF7A6;
+    transform: scaleX(0);
+    transform-origin: left;
+    animation: animate 0.3s linear forwards;
+}
+
+/* Resaltemos que la regla @keyframes permite construir animaciones, a partir de un elemento con transición */
+@keyframes animate{
+    100% {
+        transform: scaleX(1);
+    }
+}
+
+.progress-bar .step .bullet span {
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 25px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.progress-bar .step .bullet.active span {
+    display: none;
+}
+.progress-bar .step .check {
+    position: absolute;
+    left: 50%;
+    top: 70%;
+    font-size: 15px;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+.progress-bar .step .check.active {
+    display: block;
+    color: #fff;
+}
+
