--- a/formulario.css
+++ b/formulario.css
@@ -36,6 +36,7 @@ body {
 }
 /*** Aquí terminamos de centrar el formulario***/
 
+
 /* A partir de aqui vamos dando forma a los elementos del fomulario */
 .form-outer form .page {
     width: 25%; 
@@ -158,7 +159,8 @@ form .page .btns button .next {
     animation: animate 0.3s linear forwards;
 }
 
-/* Resaltemos que la regla @keyframes permite construir animaciones, a partir de un elemento con transición */
+/* Resaltemos que la regla @keyframes permite construir animaciones, a partir de un elemento con 
+transición */
 @keyframes animate{
     100% {
         transform: scaleX(1);
@@ -187,5 +189,6 @@ form .page .btns button .next {
 .progress-bar .step .check.active {
     display: block;
     color: #fff;
-}
+} 
+/**/
 
