--- a/CSS/web.css
+++ b/CSS/web.css
@@ -14,7 +14,9 @@
    height: 25vh;
 }
 .bienvenida h2{
-   color:#ffffff;
+   background: linear-gradient(rgba(49, 161, 77, 0.616),rgb(186, 214, 219));
+   -webkit-background-clip: text;
+     color: transparent;
    font-family: 'Mate SC', serif;
    text-align: center;
    font-size: 40px;
@@ -30,7 +32,9 @@
    flex-direction: column;
 }
 .img-header .bienvenida i {
-   color: rgb(194, 94, 13);
+   background: linear-gradient(rgba(49, 161, 77, 0.616),rgb(186, 214, 219));
+   -webkit-background-clip: text;
+     color: transparent;
 }
 .img-header .bienvenida{
    width: 100%;
@@ -52,7 +56,10 @@
 .about-us .info h3{
     text-align: center;
     font-size: 40px;
-    font-weight: 400;
+    font-weight: 700;
+    background: linear-gradient(rgba(5, 119, 62, 0.788),rgb(206, 247, 224));
+   -webkit-background-clip: text;
+     color: transparent;
 }
 .about-us .info p {
    width: 80%;
@@ -66,13 +73,16 @@
 .about-us .free-content{
     width: 100%;
     margin-top: 100px;
-    background: #787988;
+    background-image: linear-gradient(180deg, #505467 0, #1f3259 50%, #00154b 100%);
     padding:30px;
 }
 .about-us .free-content h4{
     text-align: center;
     font-size: 40px;
     font-weight: 400;
+    background: linear-gradient(rgb(247, 201, 0),rgb(212, 226, 13),rgb(65, 217, 255) );
+   -webkit-background-clip: text;
+     color: transparent;
 }
 .about-us .free-content .icons{
     width: 90%;
