--- a/CSS/web.css
+++ b/CSS/web.css
@@ -13,6 +13,7 @@
    width: 100%;
    height: 25vh;
 }
+/* Color de un titulo*/
 .bienvenida h2{
    background: linear-gradient(rgba(49, 161, 77, 0.616),rgb(186, 214, 219));
    -webkit-background-clip: text;
