--- a/tendencias.css
+++ b/tendencias.css
@@ -110,18 +110,19 @@
      font-weight: 400;
  }
  .about-us .info p {
+
     width: 80%;
     margin:50px auto;
     text-align: center;
     color:#000;
-    font-size: 19px;
+    font-size: 25px;
     line-height: 40px;
-    font-family: Lato;
+    font-family: 'Poppins', sans-serif;
  }
  .about-us .free-content{
      width: 100%;
-     margin-top: 100px;
-     background-image: radial-gradient(circle at 50% -20.71%, #cfa8ff 0, #9d8bff 25%, #6c6cd8 50%, #3f4ea4 75%, #153375 100%);
+     margin-top: 30px;
+     background-image: linear-gradient(180deg, #9f90f4 0, #6c6cd8 50%, #274bbd 100%);
      padding:30px;
  }
  .about-us .free-content h4{
@@ -131,19 +132,20 @@
  }
  .about-us .free-content .icons{
      width: 90%;
-     margin:30px auto;
+     margin: 20px auto;
      display: flex;
      justify-content: center;
  }
  .about-us .free-content .icons > div{
     width: 100%; 
-    margin:0px 30px;
+    margin:0px 20px;
  }
  .about-us .free-content .icons > div > .iconos{
      width:100%;
      font-size: 80px;
      display: flex;
      justify-content: center;
+     margin: 15px;
  }
 
  /** ICONOS ESPECIFICOS **/
@@ -261,3 +263,65 @@ footer {
     text-decoration: none;
     color: #C7C7C7;
  }
+
+ /*Agregando Informacion*/
+
+ .cards {
+   background-image: linear-gradient(180deg, #bf90f2 0, #8f6cd8 50%, #594bbf 100%);
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   gap: 25px;
+   margin: 20px 0;
+   margin-top: 20px;
+ }
+ 
+ .cards img {
+   margin-left: 35px;
+   width: 90%;
+   height: 200px;
+ }
+
+ .cards h1 { 
+   text-align: center;
+   font-size: 30px;
+   font-weight: 300px; 
+   margin: 25px 0px 5px 0px;
+   margin-left: 20px;
+ } 
+
+ .info { 
+   text-align: center;
+   font-size: 20px;
+ }
+
+ .info2 { 
+   font-size: 20px;
+  }
+
+ /*Agregando usos y aplicaciones para el internet de las cosas y la realidad virtual y aumentada*/
+
+ .container1 {
+   background-image: radial-gradient(circle at 50% -20.71%, #a4d8ec 0, #a7d7ef 6.25%, #abd6f1 12.5%, #b0d5f3 18.75%, #b5d3f4 25%, #bbd2f4 31.25%, #c1d0f4 37.5%, #c7cff3 43.75%, #cdcdf2 50%, #d3cbf0 56.25%, #d9caed 62.5%, #dec8ea 68.75%, #e3c7e7 75%, #e8c6e3 81.25%, #ecc5df 87.5%, #efc4da 93.75%, #f2c4d6 100%);
+   font-size: 20px;
+   text-align: center;
+   font-family: 'Play', sans-serif;
+   display: grid;
+   gap: 25px;
+ }
+ 
+ .its use h3 {
+   text-align: center;
+   margin: 20px 0px 5px 0px;
+   font-size: 30px;
+   display: inline-block;
+ }
+
+ .its use h4 {  
+   height: 190px;
+   padding: 10px 0;
+   color: grid;
+   text-transform: uppercase;
+   display: inline-block;
+   font-weight: bold;
+ }
+ 
